Updated About Me section and added Study Grind to Projects section

--- a/index.html
+++ b/index.html
@@ -76,8 +76,6 @@
           <p data-aos="fade-up" data-aos-delay="200"><a class="button is-medium rainbow" target="_blank" href="Ocean_Ronquillo_Morgan_Resume.pdf"><span id="typed"></span></a></p>
         </div>
 
-
-
     		<span id="scroll" class="hero__scroll" data-aos="fade-up" data-aos-delay="300">
           Scroll Down
           <a href="#about">
@@ -94,22 +92,31 @@
         <div class="columns">
 
           <div class="column is-one-third" data-aos="fade-right">
-            <p class="title is-5 has-text-centered">OCEAN RONQUILLO-MORGAN</p>
-            <p class="subtitle is-7 has-text-centered">DEVELOPER & PRODUCT MANAGER</p>
 
+            <!-- Headshot Photo -->
             <figure class="image is-480x480">
               <img class="is-rounded" src="./assets/img/ocean.jpg" alt="Ocean Ronquillo-Morgan">
             </figure>
+
             <br />
 
-            <!-- Social Buttons -->
-            <p class="has-text-centered">
-              <a class="button is-small" href="Ocean_Ronquillo_Morgan_Resume.pdf" target="_blank" title="Resume"><span class="icon is-small"><i class="fas fa-file-alt"></i></span></a>
-              <a class="button is-small" href="https://www.linkedin.com/in/oceanronquillomorgan" target="_blank" title="LinkedIn"><span class="icon is-small"><i class="fab fa-linkedin-in fa-fw"></i></span></a>
-              <a class="button is-small" href="https://github.com/OceanRonquilloMorgan" target="_blank" title="GitHub"><span class="icon is-small"><i class="fab fa-github fa-fw"></i></span></a>
-              <a class="button is-small" href="https://www.twitter.com/ayeocean_" target="_blank" title="Twitter"><span class="icon is-small"><i class="fab fa-twitter fa-fw"></i></span></a>
-              <a class="button is-small" href="mailto:oronquil@usc.edu" title="Email"><span class="icon is-small"><i class="far fa-envelope fa-fw"></i></span></a>
+            <!-- Name and Location -->
+            <h3 class="is-5 has-text-centered"><b>Ocean Ronquillo-Morgan</b></h3>
+            <p class="heading is-7 has-text-centered">Los Angeles, CA</p>
+
+            <!-- Bio -->
+            <p class="subtitle is-7 has-text-centered">CEO @geistwear •
+              Web Developer @sbdigitalagency • Former Software Engineering
+              Intern @worldeconomicforum
+
+              <br />
+              <br />
+
+              <!-- Resume -->
+              <a class="button is-fullwidth is-dark is-outlined" href="Ocean_Ronquillo_Morgan_Resume.pdf" target="_blank" title="Resume"><span>Resume</span></a>
             </p>
+
+            <!-- Social Buttons -->
 
           </div>
 
@@ -141,7 +148,7 @@
               Inspired by the intersection of technology, business, and design / cinematography,
               I enjoy finding unique challenges to solve, innovative ways to disrupt these realms,
               and dream of bringing new creativity and innovation to the global market within
-              the tech industry.</p>
+              the tech industry.
             </p>
 
             <br />
@@ -192,7 +199,7 @@
             <div class="level-item has-text-centered">
               <div>
                 <h3 class="heading"><b>On-Campus Organizations</b></h3>
-                <h2 class="subheading"><b><span class="counter">6</span></b></h2>
+                <h2 class="subheading"><b><span class="counter">8</span></b></h2>
               </div>
             </div>
 
@@ -299,23 +306,19 @@
       <section class="section is-small has-text-white has-background-danger" id="message">
         <div class="message-container">
           <nav class="level">
-            <div class="level-item has-text-centered">
-              <div>
-                <h2 class="subheading"><b>Contact Me</b></h2>
-              </div>
-            </div>
 
             <div class="level-item has-text-centered">
               <div>
-                <h4>I am always open to grab a cup of coffee or simply say hello at <em>oronquil@usc.edu</em></h4>
+                <h3><b>CONTACT ME</b></h3>
+                <h3 class="subheading">I am always open to grab a cup of coffee or simply say hello at <em>oronquil@usc.edu</em></h3>
               </div>
             </div>
 
+            <!-- Resume Button -->
             <div class="level-item has-text-centered">
               <div>
-                <!-- Resume Button -->
                 <p>
-                  <a href="Ocean_Ronquillo_Morgan_Resume.pdf" target="_blank" class="button is-medium is-danger is-inverted is-outlined is-rounded">
+                  <a href="Ocean_Ronquillo_Morgan_Resume.pdf" target="_blank" class="button is-medium is-danger is-inverted is-outlined">
                     <span>RESUME</span>
                   </a>
                 </p>
@@ -337,7 +340,7 @@
           <div class="columns features">
 
             <!-- Study Grind -->
-            <!-- <div class="column is-4" data-aos="flip-up" data-aos-delay="200">
+            <div class="column is-4" data-aos="flip-up" data-aos-delay="200">
               <a class="open-modal" data-modal-id="#studygrind-modal">
                 <div class="card-image project-card is-shady">
                   <figure class="image is-4by3">
@@ -345,14 +348,14 @@
                   </figure>
                 </div>
               </a>
-            </div> -->
+            </div>
 
-            <!-- GameGeist Apparel -->
+            <!-- Geistwear -->
             <div class="column is-4" data-aos="flip-up" data-aos-delay="200">
-              <a class="open-modal" data-modal-id="#gamegeistapparel-modal">
+              <a class="open-modal" data-modal-id="#geistwear-modal">
                 <div class="card-image project-card is-shady">
                   <figure class="image is-4by3">
-                    <img src="./assets/img/projects/gamegeistapparel.jpg" alt="GameGeist Apparel">
+                    <img src="./assets/img/projects/geistwear.jpg" alt="Geistwear">
                   </figure>
                 </div>
               </a>
@@ -369,6 +372,10 @@
               </a>
             </div>
 
+          </div>
+
+          <div class="columns features">
+
             <!-- Emaily -->
             <div class="column is-4" data-aos="flip-up" data-aos-delay="200">
               <a class="open-modal" data-modal-id="#emaily-modal">
@@ -379,10 +386,6 @@
                 </div>
               </a>
             </div>
-
-          </div>
-
-          <div class="columns features">
 
             <!-- SB Digital Agency Restaurants Landing Page -->
             <div class="column is-4" data-aos="flip-up" data-aos-delay="200">
@@ -491,7 +494,7 @@
               </div>
               <div data-aos="fade-left" class="timeline-content">
                 <p class="heading">July 2018</p>
-                <p>Launched My Own Brand, GameGeist Apparel 👚</p>
+                <p>Launched My Own Brand, Geistwear 👚</p>
               </div>
             </div>
 
@@ -528,7 +531,7 @@
     <footer class="footer has-background-black-ter">
       <div data-aos="zoom-in" class="container footer-custom">
 
-        <p>Copyright &copy; 2018 Ocean Ronquillo-Morgan</p>
+        <p>Copyright &copy; 2019 Ocean Ronquillo-Morgan</p>
 
         <br />
 
@@ -542,7 +545,7 @@
         </p>
 
         <!-- Back to Top Button -->
-        <a href="#landing" class="button is-danger is-rounded is-inverted is-outlined">
+        <a href="#landing" class="button is-light is-rounded is-outlined">
           <span>BACK TO TOP</span>
         </a>
 
@@ -551,16 +554,74 @@
 
     <!-- Modals -->
 
-    <!-- GameGeist Apparel -->
-    <div aria-hidden="" class="modal modal-fx-fadeInScale" id="gamegeistapparel-modal">
-      <div class="modal-background close-modal" data-modal-id="#gamegeistapparel-modal"></div>
+    <!-- Study Grind -->
+    <div aria-hidden="" class="modal modal-fx-fadeInScale" id="studygrind-modal">
+      <div class="modal-background close-modal" data-modal-id="#studygrind-modal"></div>
       <div class="modal-content">
         <div class="box">
-          <h2>GameGeist Apparel</h2>
+          <h2>Study Grind</h2>
           <hr />
 
           <h3><b>SUMMARY</b></h3>
-          <p>GameGeist Apparel LLC provides fashionable and trendy college gameday and tailgate apparel for men and women. Driven by the vocation to make today’s trends and pop culture more accessible to the greater collegiate gameday community, our brand is about providing college students with a stylish selection of modern clothing for any gameday event.</p>
+          <p>Study Grind is a MVP mobile app concept solution created while taking a course called
+            <em>Digital Playbook for Entrepreneurs: Creating a Tech Start-Up.</em> My pitch idea
+            for a mobile app concept was selected as one of the final seven groups of the semester.
+          </p>
+
+          <br />
+
+          <h3><b>SKILLS USED</b></h3>
+
+          <p class="tags">
+              <span class="tag is-medium is-primary">Product Management</span>
+              <span class="tag is-medium is-primary">Product Design</span>
+              <span class="tag is-medium is-primary">Agile Methodologies</span>
+              <span class="tag is-medium is-warning">UX/UI Design</span>
+              <span class="tag is-medium is-danger">Digital Marketing</span>
+          </p>
+
+          <br />
+
+          <h3><b>ROLES &amp; RESPONSIBILITIES</b></h3>
+          <p>I served as product manager and managed a multidisciplinary team to scope, design, and
+            concept test a MVP mobile app for the collegiate student market, In addition, as a SCRUM Master,
+            I designed and executed agile-based sprints and led design research, rapid prototyping,
+            user testing, and UX/UI. Managed product feedback and competitive analysis through surveys,
+            concept testing, analytics tools, and A/B testing to focus product offerings.
+          </p>
+
+          <br />
+
+          <h3><b>RESOURCES</b></h3>
+
+          <p>References to material available upon request.</p>
+
+        </div>
+      </div>
+      <button aria-label="close" class="delete close-modal modal-close is-large" data-modal-id="#studygrind-modal"></button>
+    </div>
+
+    <!-- Geistwear -->
+    <div aria-hidden="" class="modal modal-fx-fadeInScale" id="geistwear-modal">
+      <div class="modal-background close-modal" data-modal-id="#geistwear-modal"></div>
+      <div class="modal-content">
+        <div class="box">
+          <h2>Geistwear</h2>
+          <hr />
+
+          <h3><b>SUMMARY</b></h3>
+          <p>Geistwear is a collegiate apparel company based in Los Angeles. Our company provides a collection of
+            stylish and trendy contemporary men and women clothing by integrating today’s trends and pop culture.
+          </p>
+
+          <br />
+
+          <p><em>Geist,</em> pronounced guy • st, is a German word for spirit; being a fan is
+            all about giving your team the spirit and energy to win. Driven by the vocation to make today’s
+            trends and pop culture more accessible to the greater collegiate community,
+            Geistwear is about keeping up with new styles and trends while providing all
+            college students with an awesome selection of clothing to represent their universities.
+          </p>
 
           <br />
 
@@ -579,20 +640,42 @@
             </a>
           </p>
 
+          <h3><b>SKILLS USED</b></h3>
+
+          <p class="tags">
+              <span class="tag is-medium is-info">E-Commerce</span>
+              <span class="tag is-medium is-link">Web Development</span>
+              <span class="tag is-medium is-info">Sales</span>
+              <span class="tag is-medium is-primary">Product Management</span>
+              <span class="tag is-medium is-primary">Product Design</span>
+              <span class="tag is-medium is-warning">UX/UI Design</span>
+              <span class="tag is-medium is-danger">Digital Marketing</span>
+
+          </p>
+
           <h3><b>ROLES &amp; RESPONSIBILITIES</b></h3>
-          <p>I currently serve as Co-Founder and Chief Technology Officer. I am responsible for managing web development, e-commerce, product and marketing outreach, and business operations.</p>
+          <p>I currently serve as Chief Executive Officer. As the main force of the company, I managed
+            and devised a starting budget of $8000 to negotiate overseas manufacturing, coordinate design efforts,
+            and develop a brand ambassador program. In addition, I bolstered sales revenue by 400% through the organization
+            of two pop-up shops in one semester. Using my digital marketing knowledge and cinematography experience, I
+            spearheaded business branding and online development efforts in conjunction with social media
+            optimization to increase website traffic and leads by 1000%. Lastly, I have
+            developed and executed a B2C sales model through an e-commerce platform.
+          </p>
 
           <br />
 
           <h3><b>SCREENSHOTS</b></h3>
-          <img src="./assets/img/projects/screenshots/gamegeist_landing.jpg">
+
+          <img src="./assets/img/projects/screenshots/geistwear_mens.jpg">
           <br />
-          <img src="./assets/img/projects/screenshots/gamegeist_shop.jpg">
+          <img src="./assets/img/projects/screenshots/geistwear_womens.jpg">
           <br />
-          <img src="./assets/img/projects/screenshots/gamegeist_order.jpg">
+          <img src="./assets/img/projects/screenshots/geistwear_second-collection.jpg">
+
         </div>
       </div>
-      <button aria-label="close" class="delete close-modal modal-close is-large" data-modal-id="#gamegeistapparel-modal"></button>
+      <button aria-label="close" class="delete close-modal modal-close is-large" data-modal-id="#geistwear-modal"></button>
     </div>
 
     <!-- Bilk -->
@@ -604,7 +687,11 @@
           <hr />
 
           <h3><b>SUMMARY</b></h3>
-          <p>Bilk is a URL shortening service and web application built with Python / Django that allows anyone to convert their long links to short snippets for better sharing across the web. It uses a PostgreSQL database to store original and shortened links.</p>
+          <p>Bilk is a URL shortening service and web application built with
+            Python / Django that allows anyone to convert their long links to short
+            snippets for better sharing across the web. It uses a PostgreSQL database
+            to store original and shortened links.
+          </p>
 
           <br />
 
@@ -634,12 +721,18 @@
           </p>
 
           <h3><b>FUTURE PLANS</b></h3>
-          <p>Ideally, I would like to acquire a domain such as 'bilk.co' so links can be as succinct possible. The current herokuapp extension adds a significant amount of characters to shortened links.</p>
+          <p>Ideally, I would like to acquire a domain such as 'bilk.co' so links
+            can be as succinct possible. The current herokuapp extension adds a
+            significant amount of characters to shortened links.
+          </p>
 
           <br />
 
           <h3><b>SCREENSHOTS</b></h3>
+
           <img src="https://user-images.githubusercontent.com/25493127/42524242-3933cda0-8470-11e8-889d-2ac020c4bf47.png">
+          <h2 class="heading">Landing Page</h2>
+
         </div>
       </div>
       <button aria-label="close" class="delete close-modal modal-close is-large" data-modal-id="#bilk-modal"></button>
@@ -654,7 +747,13 @@
           <hr />
 
           <h3><b>SUMMARY</b></h3>
-          <p>Emaily is a MERN full-stack web application that allows users to send mass emails to a large list of users for the purpose of collecting feedback. It has an authentication system implemented using Passport.js and Google OAuth 2.0 and provides functional billing and payment processing using the Stripe API. It uses Mongoose for survey creation and utilizes the SendGrid API to automatically send emails to recipients.</p>
+          <p>Emaily is a MERN full-stack web application that allows users to
+            send mass emails to a large list of users for the purpose of collecting
+            feedback. It has an authentication system implemented using Passport.js
+            and Google OAuth 2.0 and provides functional billing and payment processing
+            using the Stripe API. It uses Mongoose for survey creation and utilizes
+            the SendGrid API to automatically send emails to recipients.
+          </p>
 
           <br />
 
@@ -691,7 +790,10 @@
           <br />
 
           <h3><b>SCREENSHOTS</b></h3>
+
           <img src="https://user-images.githubusercontent.com/25493127/42410543-5c3d0f82-81eb-11e8-9060-4ad8682c82e2.png">
+          <h2 class="heading">Landing Page</h2>
+
         </div>
       </div>
       <button aria-label="close" class="delete close-modal modal-close is-large" data-modal-id="#emaily-modal"></button>
@@ -706,7 +808,12 @@
           <hr />
 
           <h3><b>SUMMARY</b></h3>
-          <p>SB Digital Agency is a cross-functional digital marketing team that provides an a-la-carte model of business solutions including social media management, paid advertising, creative production, SEO & SEM, lead generation, content marketing, web development, and growth consulting.</p>
+          <p>SB Digital Agency is a cross-functional digital marketing team
+            that provides an a-la-carte model of business solutions including
+            ocial media management, paid advertising, creative production,
+            SEO & SEM, lead generation, content marketing, web development,
+            and growth consulting.
+          </p>
 
           <br />
 
@@ -719,16 +826,35 @@
             </a>
           </p>
 
+          <h3><b>SKILLS USED</b></h3>
+
+          <p class="tags">
+              <span class="tag is-medium is-light">Web Development</span>
+              <span class="tag is-medium is-light">Digital Marketing</span>
+              <span class="tag is-medium is-light">UX/UI Design</span>
+          </p>
+
           <h3><b>ROLES &amp; RESPONSIBILITIES</b></h3>
-          <p>At my first start-up gig, I work directly with the CEO as a web developer intern. My biggest project to date has been my role in spearheading the creation of a new landing page, <em>Digital Marketing and Fine Dining,</em> which procured 200+ lead generations in the first month as a result of utilizing an automated workflow sales funnel to capture those in the fine dining market via MailChimp.</p>
+          <p>At my first start-up gig, I work directly with the CEO as a web developer
+            intern. My biggest project to date has been my role in spearheading
+            the creation of a new landing page, <em>Digital Marketing and Fine Dining,</em>
+            which procured 200+ lead generations in the first month as a result of
+            utilizing an automated workflow sales funnel to capture those in the
+            fine dining market via MailChimp.
+          </p>
 
           <br />
 
           <h3><b>SCREENSHOTS</b></h3>
+
           <img src="./assets/img/projects/screenshots/restaurants1.jpg">
+          <h2 class="heading">Restaurants Landing Page with EBook Sign-Up</h2>
           <br />
+
           <img src="./assets/img/projects/screenshots/restaurants2.jpg">
+          <h2 class="heading">About SB Digital Agency</h2>
           <br />
+
         </div>
       </div>
       <button aria-label="close" class="delete close-modal modal-close is-large" data-modal-id="#sbdigitalagency-modal"></button>
