Updated Resume and fixed minor typo issues

--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
           <h3><b>SUMMARY</b></h3>
           <p>Study Grind is a MVP mobile app concept solution created while taking a course called
             <em>Digital Playbook for Entrepreneurs: Creating a Tech Start-Up.</em> My pitch idea
-            for a mobile app concept was selected as one of the final seven groups of the semester.
+            was selected as one of the final seven groups of the semester.
           </p>
 
           <br />
@@ -584,10 +584,10 @@
 
           <h3><b>ROLES &amp; RESPONSIBILITIES</b></h3>
           <p>I served as product manager and managed a multidisciplinary team to scope, design, and
-            concept test a MVP mobile app for the collegiate student market, In addition, as a SCRUM Master,
+            concept test a MVP mobile app for the collegiate student market. In addition, as a SCRUM Master,
             I designed and executed agile-based sprints and led design research, rapid prototyping,
-            user testing, and UX/UI. Managed product feedback and competitive analysis through surveys,
-            concept testing, analytics tools, and A/B testing to focus product offerings.
+            user testing, and UX/UI. I also managed product feedback and conducted competitive analysis
+            through surveys, concept testing, analytical tools, and A/B testing to focus product offerings.
           </p>
 
           <br />
@@ -650,13 +650,12 @@
               <span class="tag is-medium is-primary">Product Design</span>
               <span class="tag is-medium is-warning">UX/UI Design</span>
               <span class="tag is-medium is-danger">Digital Marketing</span>
-
           </p>
 
           <h3><b>ROLES &amp; RESPONSIBILITIES</b></h3>
           <p>I currently serve as Chief Executive Officer. As the main force of the company, I managed
             and devised a starting budget of $8000 to negotiate overseas manufacturing, coordinate design efforts,
-            and develop a brand ambassador program. In addition, I bolstered sales revenue by 400% through the organization
+            and develop a brand ambassador program. In addition, I bolstered sales revenue by 200% through the organization
             of two pop-up shops in one semester. Using my digital marketing knowledge and cinematography experience, I
             spearheaded business branding and online development efforts in conjunction with social media
             optimization to increase website traffic and leads by 1000%. Lastly, I have
@@ -688,7 +687,7 @@
 
           <h3><b>SUMMARY</b></h3>
           <p>Bilk is a URL shortening service and web application built with
-            Python / Django that allows anyone to convert their long links to short
+            Python and Django that allows anyone to convert their long links to short
             snippets for better sharing across the web. It uses a PostgreSQL database
             to store original and shortened links.
           </p>
@@ -829,9 +828,9 @@
           <h3><b>SKILLS USED</b></h3>
 
           <p class="tags">
-              <span class="tag is-medium is-light">Web Development</span>
-              <span class="tag is-medium is-light">Digital Marketing</span>
-              <span class="tag is-medium is-light">UX/UI Design</span>
+              <span class="tag is-medium is-link">Web Development</span>
+              <span class="tag is-medium is-warning">UX/UI Design</span>
+              <span class="tag is-medium is-danger">Digital Marketing</span>
           </p>
 
           <h3><b>ROLES &amp; RESPONSIBILITIES</b></h3>
@@ -840,7 +839,9 @@
             the creation of a new landing page, <em>Digital Marketing and Fine Dining,</em>
             which procured 200+ lead generations in the first month as a result of
             utilizing an automated workflow sales funnel to capture those in the
-            fine dining market via MailChimp.
+            fine dining market via MailChimp. More recently, I have also developed
+            a website to showcase luxurious Italian villa rental listings which
+            served 8 clients.
           </p>
 
           <br />
