Updated Bio and Timeline with my InvestFar spring 2019 internship :moneybag:

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 
             <!-- Bio -->
             <p class="subtitle is-7 has-text-centered">CEO @geistwear •
-              Web Developer @sbdigitalagency • Former Software Engineering
-              Intern @worldeconomicforum
+              Product Manager Intern @investfar • Web Developer @sbdigitalagency
+              • Former Software Engineering Intern @worldeconomicforum
 
               <br />
               <br />
@@ -515,6 +515,16 @@
               <div data-aos="fade-left" class="timeline-content">
                 <p class="heading">September 2018</p>
                 <p>Attended the Forbes Under 30 Summit as a Scholar 💼</p>
+              </div>
+            </div>
+
+            <div class="timeline-item is-primary">
+              <div class="timeline-marker is-danger is-icon">
+                <i class="fas fa-money-bill-alt"></i>
+              </div>
+              <div data-aos="fade-right" class="timeline-content">
+                <p class="heading">January 2019</p>
+                <p>Joined InvestFar as a Product Manager Intern 💰</p>
               </div>
             </div>
 
