Quick Timeline fix for 2019

--- a/index.html
+++ b/index.html
@@ -518,6 +518,11 @@
               </div>
             </div>
 
+            <!-- 2019 -->
+            <header class="timeline-header">
+              <span class="tag is-primary">2019</span>
+            </header>
+
             <div class="timeline-item is-primary">
               <div class="timeline-marker is-danger is-icon">
                 <i class="fas fa-money-bill-alt"></i>
