Updated bio, timeline, and resume

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
         \__(__|
         ~Fight On!
     Heyo! Welcome to my personal website and portfolio.
-    - Like what you see? I'm currently looking for
-    - summer 2019 internship opportunities.
-    - Please contact me at: oronquil@usc.edu
+    Like what you see? Please contact me at: oronquil@usc.edu
 -->
 <!DOCTYPE HTML>
 <html lang="en">
@@ -125,7 +123,7 @@
             <h3><b>SUMMARY</b></h3>
             <p>
               Computer Science and Business Administration (Class of 2021) undergraduate at the University of Southern California.
-               Currently seeking summer 2019 internship opportunities for software engineering or product management.
+               Passionate about opportunities at the intersection of technology, business, and design.
                Please contact me at <em>oronquil@usc.edu</em> if you'd like to get connected!
             </p>
 
@@ -530,6 +528,16 @@
               <div data-aos="fade-right" class="timeline-content">
                 <p class="heading">January 2019</p>
                 <p>Joined InvestFar as a Product Manager Intern 💰</p>
+              </div>
+            </div>
+
+            <div class="timeline-item is-primary">
+              <div class="timeline-marker is-danger is-icon">
+                <i class="fas fa-building"></i>
+              </div>
+              <div data-aos="fade-left" class="timeline-content">
+                <p class="heading">April 2019</p>
+                <p>Attended the BlackRock Find Your Future Forum - Futures in Tech 🌉</p>
               </div>
             </div>
 
