Updated website to reflect my Accenture summer internship and add May resume

--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
             <p class="heading is-7 has-text-centered">Los Angeles, CA</p>
 
             <!-- Bio -->
-            <p class="subtitle is-7 has-text-centered">CEO @geistwear •
-              Product Manager Intern @investfar • Web Developer @sbdigitalagency
-              • Former Software Engineering Intern @worldeconomicforum
+            <p class="subtitle is-7 has-text-centered">Technology Summer Analyst / SWE Intern @ accenture
+              • CEO @geistwear • PM Intern @investfar • Former Web Developer Intern @sbdigitalagency
+              • Former SWE Intern @worldeconomicforum
 
               <br />
               <br />
@@ -533,11 +533,21 @@
 
             <div class="timeline-item is-primary">
               <div class="timeline-marker is-danger is-icon">
-                <i class="fas fa-building"></i>
+                <i class="fas fa-plane"></i>
               </div>
               <div data-aos="fade-left" class="timeline-content">
                 <p class="heading">April 2019</p>
                 <p>Attended the BlackRock Find Your Future Forum - Futures in Tech 🌉</p>
+              </div>
+            </div>
+
+            <div class="timeline-item is-primary">
+              <div class="timeline-marker is-danger is-icon">
+                <i class="fas fa-building"></i>
+              </div>
+              <div data-aos="fade-right" class="timeline-content">
+                <p class="heading">June 2019</p>
+                <p>Joined Accenture as a Technology Summer Analyst, Software Engineering Intern 🏢</p>
               </div>
             </div>
 
